# odds-tracker-desktop

./: .gitignore  README.md  index.html  jest.config.js  main.py  package.json  pyproject.toml  requirements.txt
src/: App.jsx  __init__.py  main.py
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/analysis/: arbitrage_detector.py  bet_size_calculator.py  utils.py
src/analysis/bet_size/: README.md  __init__.py  calculator.py  constants.py  models.py  utils.py
src/data_collection/: odds_collector.py
src/data_collection/scrapers/: oddscomau_scraper.py  oddsjet_scraper.py
src/ui/: App.jsx  __init__.py  bridge.js  index.html  index.js  main.jsx  main_window.py  package.json  setupTests.js  web_view.py
src/ui/components/: AlertSettings.jsx  Dashboard.jsx  OddsMatrix.jsx  README.md
src/ui/components/__tests__/: Dashboard.test.jsx
src/ui/hooks/: usePythonBridge.js
src/utils/: networkUtils.js  oddsParser.js  storage.js
tests/: README.md  conftest.py  helpers.py
tests/analysis/bet_size/: test_utils.py
tests/integration/: __init__.py  conftest.py  test_arbitrage_detection.py  test_data_collection.py  test_error_handling.py  test_system_integration.py  test_ui.py
tests/ui/: test_web_view.py
