[package]
name = "odds-tracker-desktop"
version = "0.1.0"
description = "Horse racing odds tracker"
authors = ["you"]
license = ""
repository = ""
default-run = "odds-tracker-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"